Fixed layout issues and made CSS adjustments for an improved look.

--- a/src/main/resources/public/css/site.css
+++ b/src/main/resources/public/css/site.css
@@ -16,14 +16,11 @@ body {
     background: #3e474f;
 }
 .container {
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
-    padding: 0 25px;
     background: #FFF;
 }
 header .site-header {
-    border-bottom: 1px solid #d1d1d1;
-    margin: 0 auto;
     height: 95px;
     font-family: 'Francois One', sans-serif;
     background: #3079AB;
@@ -89,7 +86,6 @@ footer a:hover {
     margin-top: 10px;
     margin-bottom: 10px;
     margin-right: 30px;
-    float: left;
 }
 
 .button.button-secondary {
@@ -147,6 +143,7 @@ h2 {
     font-size: 20px;
     color: #333;
     text-align: left;
+    padding-bottom: 10px;
 }
 h3 {
     font-size: 28px;
@@ -230,7 +227,7 @@ a.link:hover {
 .entry-comments,
 .entry-tags {
     background: #f1f1f1;
-    padding: 5px 0;
+    padding: 20px 0;
 }
 
 .entry-comments .container,
@@ -245,25 +242,27 @@ a.link:hover {
 .new-comment .container {
     max-width: 700px;
     margin: 0 auto;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
 .entry-comments h2 {
     border-bottom: 1px solid #c1c1c1;
-    padding-bottom: 35px;
+    padding-bottom: 3px;
 }
 
 .entry-tags h2 {
-    padding-bottom: 35px;
+    padding-bottom: 3px;
 }
 
 .comment {
     border-top: 1px solid #c1c1c1;
     border-bottom: 1px solid #c1c1c1;
-    padding: 35px 0 20px;
+    padding: 25px 0 10px;
     margin: 2px 0 0 0;
 }
 
 .tag {
-    padding: 10px 0 10px;
+    padding: 15px 0 10px;
     margin: 2px 0 0 0;
 }
 
@@ -357,10 +356,8 @@ input[type=submit] {
     display: block;
     font-size: 14px;
     padding: 10px 20px;
-    max-width: 96%;
-    margin-left: 1%;
-    margin-right: 1%;
 }
+
 
 /* =================================
   Media Queries
@@ -397,6 +394,7 @@ input[type=submit] {
 
     .container {
         width: 80%;
+
         max-width: 1150px;
     }
 
